--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Kavoon">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBX2cO5_TjrVu9Ept1pNxMUSZUoiBolRUo&libraries=places"></script>
+    </div>
   </body>
 </html>
